tests/NormalTests/paczka1/small_fuzzy/47164213.err
Error in line 4: TSoQROTWWp A408 30,6
Error in line 7: TSoQROTWWp A146 70,9
Error in line 9: eTSyBNmJ A146 52,6
Error in line 2: HpkmJmRnh S341 90,3
